fix styling on mobile

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -397,7 +397,8 @@ table.basic td {
 
 textarea {
     width: 100%;
-    height: 50px;
+    box-sizing: border-box;
+    height: auto;
 }
 
 .fl {
