--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -6,6 +6,10 @@ body header#nav_bar {
     position: absolute;
 }
 
+body header#nav_bar #logo h1 {
+    width: 280px;
+}
+
 body #nav_bar .nav #page_nav {
     display: none;
 }
@@ -18,7 +22,9 @@ body .wrapper h3 {
     padding-left: 5px;
 }
 
-body .w49 {
+body .w49,
+body .w500
+{
     width: 100%;
 }
 
@@ -28,4 +34,9 @@ body .wrapper ul#myGallery {
 
 body .hidden-mobile {
     display: none !important;
+}
+
+body ul {
+    padding-left: 5px;
+    margin-left: 0;
 }
